fixed styling and collapsing

--- a/vueapp/src/assets/styles.scss
+++ b/vueapp/src/assets/styles.scss
@@ -176,5 +176,5 @@ p {
 
 .mgl-layerControlGroupHeading {
     font-weight: 500;
-    font-size: 16px !important;
+    font-size: 14px !important;
 }
